Issue-3 Create send page (#13)
* feat: Add send users search user feature

* feat: Add functionality to search UI in SendActivity

* feat: Set up send file UI and functionality

* refactor: Reformat and organize code

---------

Co-authored-by: Faaizah Tas. Joita <faaizahtas.joita@macbookpro.utsarr.net>
Co-authored-by: Zachary Ohlenforst <zohlenforst@gmail.com>
# Conflicts:
#	app/build.gradle.kts
#	app/src/main/java/com/github/skyfall/MainActivity.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,7 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="username">Username</string>
+    <string name="send_file">Send File</string>
+    <string name="send_page_title">SEND PAGE</string>
 </resources>
