--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_firebase_auth">FirebaseAuthActivity</string>
+    <string name="download_icon">Download</string>
+    <string name="receive_page_title">Receive Page</string>
+    <string name="receive_page_icon">Receive</string>
+    <string name="delete_request">delete</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
