--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="settings_title">SETTINGS</string>
+    <string name="change_password_title">CHANGE PASSWORD</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
